--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,8 @@ logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
 
+# spring.mvc.static-path-pattern=/content/**
+# spring.web.resources.static-locations=classpath:/files/,classpath:/static-files
+
+
 
