--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8081
 #spring.datasource.driver-class-name=
 spring.datasource.url=jdbc:mysql://localhost:3306/d13cnpm7chamcong
 spring.datasource.username=root
-spring.datasource.password=12345678
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
